[package]
name = "cryptex-fs"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.4"
chacha20poly1305 = "0.9"
cryptex = "1.4"
curve25519-dalek = "4.0.0-pre.2"
dirs = "4"
heed = "0.11"
merlin = "3"
rand_core = { version = "0.6", features = ["std"] }
rand = "0.8"
serde = { version = "1", features = ["serde_derive"] }
x25519-dalek = "2.0.0-pre.1"
zeroize = "1.3"
